--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return \n",
+    "    return travel_destination\n",
     "    pass"
    ]
   },
