--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for countries in travel\n",
+    "    for countries in travel_destinations\n",
     "    pass"
    ]
   },
