--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for countries in travel_destinations:\n",
-    "        capitalize\n",
+    "        capitalize_countries\n",
     "    pass"
    ]
   },
