--- a/index.ipynb
+++ b/index.ipynb
@@ -227,6 +227,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    capitalize_coutn\n",
     "    for countries in travel_destinations:\n",
     "        capitalize_countries.append\n",
     "    pass"
