--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for countries in travel_destinations:\n",
-    "        capitalize_countries.append\n",
+    "        capitalize_countries.append(countrie)\n",
     "    pass"
    ]
   },
