--- a/index.ipynb
+++ b/index.ipynb
@@ -230,6 +230,7 @@
     "    capitalize_countries = []\n",
     "    for countries in travel_destinations:\n",
     "        capitalize_countries.append(countries.title())\n",
+    "    return capit\n",
     "    pass"
    ]
   },
